<resources>
    <string name="app_name_en">GERDApp</string>
    <string name="app_name">逆流日誌</string>
    <string name="version_number">X.X.X</string>
    <string name="internet_connection_failed">請檢查網路連線</string>

    <string name="check_input_valid">[&lt;&gt;.*:^+\=&amp;/]</string>
    <string name="check_alphabetic">[A-Za-z]</string>
    <string name="check_numeric">[0-9]</string>

    <!-- reminders -->
    <string name="morning_reminder_time">12:00</string>
    <string name="evening_reminder_time">22:00</string>
    <string name="reminder_title">填寫問卷通知</string>
    <string name="reminder_text">記得填寫問卷喔！</string>

    <!-- urls -->
    <string name="server_url">120.126.104.106</string>
    <string name="login_url">http://%s/GERD_API/api/LoginCheck/%s|%s</string>
    <string name="questionnaire_url">http://%s/GERD/UserInfo?account=%s</string>
    <string name="get_record_url">http://%s/GERD_API/api/DiaryQuestionnaire/%s</string>
    <string name="get_user_url">http://%s/GERD_API/api/Personal/%s</string>
    <string name="get_notification_url">http://%s/GERD_API/api/ReturnMachine/%s</string>
    <string name="get_user_data_url">http://%s/GERD_API/api/Personal/%s</string>
    <string name="get_questionnaire_status_url">http://%s/GERD_API/api/DiaryQuestionnaireCheck/%s</string>
    <string name="get_remind_check_url">http://%s/GERD_API/api/RemindCheck/%s|%s</string>

    <!-- get record urls -->
    <string name="get_sleep_record_url">http://%s/GERD_API/api/SleepRecord/%s|%s|%s|%s</string>
    <string name="get_food_record_url">http://%s/GERD_API/api/FoodRecord/%s|%s|%s|%s</string>
    <string name="get_event_record_url">http://%s/GERD_API/api/ActivityRecord/%s|%s|%s|%s</string>
    <string name="get_drug_record_url">http://%s/GERD_API/api/DrugRecord/%s|%s|%s|%s</string>
    <string name="get_symptoms_record_url">http://%s/GERD_API/api/SymptomRecord/%s|%s|%s|%s</string>
    <string name="input_time_format">%04d%02d%02d</string>

    <!-- post record urls -->
    <string name="post_sleep_record_url">http://%s/GERD_API/api/SleepRecord/</string>
    <string name="post_food_record_url">http://%s/GERD_API/api/FoodRecord/</string>
    <string name="post_event_record_url">http://%s/GERD_API/api/ActivityRecord/</string>
    <string name="post_drug_record_url">http://%s/GERD_API/api/DrugRecord/</string>
    <string name="post_symptoms_record_url">http://%s/GERD_API/api/SymptomRecord/</string>

    <string name="post_symptoms_json">{\"CaseNumber\": \"%s\", \"SymptomItem\": \"%s\", \"SymptomOther\": \"%s\", \"StartDate\": \"%s"\", \"EndDate\": \"%s\", \"SymptomNote\": \"%s\"}</string>

    <!-- strings for login -->
    <string name="login_headline">已經有帳號嗎？</string>
    <string name="login_title">登入</string>
    <string name="account">帳號、案號</string>
    <string name="password">密碼</string>
    <string name="check_password">確認密碼</string>
    <string name="forgot_password">忘記密碼？</string>
    <string name="sign_up_headline">還沒有帳號嗎？</string>
    <string name="sign_up_title">註冊</string>
    <string name="user_name">暱稱</string>
    <string name="user_gender">性別</string>
    <string name="user_account">帳號</string>
    <string name="sign_up_success">註冊成功</string>
    <string name="sign_up_failed">註冊失敗</string>
    <string name="login_success">登入成功</string>
    <string name="login_failed">登入失敗</string>
    <string name="forgot_password_title">忘記密碼</string>
    <string name="verification_code">驗證碼</string>
    <string name="resend_verification_code">重新發送驗證碼</string>
    <string name="send_verification_code">發送驗證碼</string>
    <string name="verification">驗證</string>
    <string name="error_enter_nickname">請輸入暱稱</string>
    <string name="error_enter_gender">請輸入性別</string>
    <string name="error_enter_account">請輸入帳號</string>
    <string name="error_enter_password">請輸入密碼</string>
    <string name="error_check_password_failed">密碼不相符</string>
    <string name="error_illegal_password_length">密碼長度須為6~12位英數字</string>
    <string name="error_illegal_password">密碼需包含英文與數字</string>
    <string name="error_illegal_account">帳號已存在</string>
    <string name="error_invalid_input">字串不可包含特殊符號</string>
    <string name="error_wrong_password">密碼錯誤</string>
    <string name="error_wrong_account">帳號錯誤或不存在</string>
    <string name="error_input_too_long">超過字數限制</string>
    <string name="error_end_time_is_not_before_start_time">結束時間不得少於開始時間</string>

    <!-- strings for dialog -->
    <string name="notification_title">繳回機器通知</string>
    <string name="notification_message">提醒您，預計於 %s 須繳回機器\n（中正樓十三樓內視鏡診斷與治療中心）</string>
    <string name="notification_neutral_button">我知道了</string>
    <string name="dont_show_notification">不再顯示</string>

    <!-- strings for button -->
    <string name="complete">完成</string>

    <!-- strings for bottom app bar -->
    <string name="home">首頁</string>
    <string name="list">問卷</string>
    <string name="stat">圖表</string>
    <string name="prof">我的</string>

    <!-- strings for settings -->
    <string name="setting_title">設定</string>
    <string name="version_title">版本</string>
    <string name="text_size_title">字體大小</string>
    <string name="text_size_large">大</string>
    <string name="text_size_medium">中</string>
    <string name="text_size_small">小</string>
    <string name="reminder_on_off_title">通知</string>
    <string name="reminder_on">開</string>
    <string name="reminder_off">關</string>

    <!-- time selection -->
    <string name="time_headline">時間</string>

    <!-- date / time format -->
    <string name="simple_date_format">yyyy-MM-dd</string>
    <string name="simple_time_format">HH:mm</string>
    <string name="simple_date_time_format">yyyy-MM-ddTHH:mm</string>
    <string name="date_time_format_ch">%d 年 %d 月 %d 日</string>
    <string name="month_date_format">%d 月 %d 日</string>>
    <string name="time_format_ch">%d 時 %02d 分</string>
    <string name="date_format">%04d/%02d/%02d</string>
    <string name="time_format">%02d:%02d</string>
    <string name="date_time_format">%04d-%02d-%02dT%02d:%02d:%02d</string>

    <!-- strings for main menu cards -->
    <string name="questionnaire">問卷</string>
    <string name="symptoms">症狀</string>
    <string name="medicine">用藥</string>
    <string name="sleep">平躺睡眠</string>
    <string name="food">飲食</string>
    <string name="event">其他活動</string>
    <string name="no_notification">沒有通知囉！</string>
    <string name="no_data">還沒有記錄喔!</string>
    <string name="data_format1">%s - %s</string>
    <string name="data_format2">%s 至 %s</string>

    <!-- strings for profile fragment -->
    <string name="profile_title">使用者資料：</string>
    <string name="profile_user_id">案號：%s</string>
    <string name="profile_user_nickname">暱稱：%s</string>
    <string name="profile_user_gender">性別：%s</string>

    <!-- strings for time record -->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="hour">時</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="start">開始</string>
    <string name="end">結束</string>

    <!-- string for symptoms fragment -->
    <string name="symptoms_record_main_symptom_headline">症狀</string>
    <string name="symptoms_record_other_symptom_headline">其他症狀</string>
    <string name="symptoms_record_add_other_symptom">新增其他症狀</string>
    <string name="symptoms_added_successfully">新增症狀成功</string>
    <string name="symptoms_added_failed">新增症狀失敗</string>

    <!-- strings for sleep fragment -->
    <string name="sleep_record_start_headline">開始就寢時間</string>
    <string name="sleep_record_end_headline">結束就寢時間</string>
    <string name="sleep_record_added_successfully">新增睡眠成功</string>
    <string name="sleep_record_added_failed">新增睡眠失敗</string>

    <!-- string for event fragment -->
    <string name="event_record_others_headline">活動項目</string>
    <string name="event_record_add_others">新增活動項目</string>
    <string name="event_record_added_successfully">新增活動成功</string>
    <string name="event_record_added_failed">新增活動失敗</string>

    <!-- string for food fragment -->
    <string name="food_record_food_headline">進食項目</string>
    <string name="food_record_add_food">新增進食項目</string>
    <string name="food_record_added_successfully">新增飲食成功</string>
    <string name="food_record_added_failed">新增飲食失敗</string>

    <!-- string for drug fragment -->
    <string name="drug_record_drug_headline">用藥內容</string>
    <string name="drug_record_add_drug">新增用藥內容</string>
    <string name="drug_record_added_successfully">新增用藥成功</string>
    <string name="drug_record_added_failed">新增用藥失敗</string>

    <!-- string for symptoms -->
    <string name="cough">咳嗽</string>
    <string name="heart_burn">火燒心</string>
    <string name="acid_reflux">胃酸逆流</string>
    <string name="chest_pain">胸痛</string>
    <string name="sour_mouth">口有酸味</string>
    <string name="hoarseness">聲音沙啞</string>
    <string name="appetite_loss">吞嚥困難</string>
    <string name="stomach_gas">嘔氣</string>
    <string name="cough_night">咳嗽(晚上)</string>
    <string name="acid_reflux_night">胃酸逆流(晚上)</string>

    <string name="note">備註</string>
    <string name="add_note">新增備註</string>

    <!-- string for chart -->
    <string name="time_table">時間表</string>
    <string name="daily_chart_date_title">%d 年 %d 月 %d 日</string>
    <string name="weekly_chart_date_title">%d 年 %d 月 %d 日 ~ %d 年 %d 月 %d 日</string>
    <string name="monthly_chart_date_title">%d 年 %d 月</string>

    <!-- string for questionnaire -->
    <string name="weekly_questionnaire">每週問卷</string>
    <string name="daily_questionnaire">每日問卷</string>
    <string name="questionnaire_complete">今日已填完所有問卷！</string>

    <!-- questionnaire note url -->
    <string name="questionnaire_note_additional_text">系統將於 %d 秒內自動跳回</string>
    <string name="questionnaire_note_leave">離開</string>

    <string name="input_exceed_number_limit">超過字數限制</string>
    <string name="input_null">項目欄位不得為空</string>

</resources>