<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textAppearance="@style/TitleText"
        android:layout_marginVertical="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="48dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/card_divider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_gender"/>

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/card_divider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_account"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/card_divider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/card_divider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_check_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="48dp">

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:elevation="2dp" />

        <include layout="@layout/card_divider"/>
        <include layout="@layout/divider"/>
        <include layout="@layout/card_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_headline"/>

            <Button
                android:id="@+id/bt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:background="@android:color/transparent"
                android:text="@string/login_title" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>