<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/green"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/symptoms"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/red"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/medicine"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/dark_blue"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/sleep"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/light_blue"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/food"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/orange"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/event"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>