<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textAppearance="@style/TitleText"
            android:layout_marginVertical="24dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/card_divider"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_code"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="48dp">

            <Button
                android:id="@+id/bt_send_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_verification_code"
                android:elevation="2dp"
                android:backgroundTint="@color/green"/>

            <Button
                android:id="@+id/bt_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:elevation="2dp"
                android:visibility="gone"
                android:backgroundTint="@color/green" />

    <!--        <include layout="@layout/card_divider"/>-->
    <!--        <include layout="@layout/divider"/>-->
    <!--        <include layout="@layout/card_divider"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_resend_verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_blue"
                    android:background="@android:color/transparent"
                    android:text="@string/resend_verification_code"
                    android:layout_gravity="end"
                    android:visibility="gone"/>

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:text="@string/sign_up_headline"/>-->

    <!--            <Button-->
    <!--                android:id="@+id/bt_signup"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:textColor="@color/light_blue"-->
    <!--                android:background="@android:color/transparent"-->
    <!--                android:text="@string/sign_up_title" />-->

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>