<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_cough"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/cough" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cough"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_heart_burn"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/heart_burn" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heart_burn"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_acid_reflux"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/acid_reflux" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/acid_reflux"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_chest_pain"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/chest_pain" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/chest_pain"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_sour_mouth"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    app:srcCompat="@drawable/sour_mouth" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sour_mouth"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_hoarseness"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/hoarseness" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hoarseness"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_appetite_loss"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/appetite_loss_1" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/appetite_loss"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/symptoms_stomach_gas"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/stomach_gas" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/stomach_gas"
                    android:textAppearance="@style/HintText"/>

            </LinearLayout>
        </TableRow>

    </TableLayout>

</FrameLayout>